--- a/index.html
+++ b/index.html
@@ -69,5 +69,47 @@
         
       
     </header>
+    <main>
+      <section class="notes-section">
+        <div class="container">
+          <div class="notes-title">
+            <h2>Notes don't fail, Structure does.</h2>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+          </div>
+          <div class="notes-card">
+            <div class="card">
+              <div class="img-box">
+                <img src="./assets/Vector.png" alt="vector">
+              </div>
+              <h3>Scattered notes</h3>
+              <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="card">
+              <div class="img-box">
+                <img src="./assets/Bookmarks.png" alt="bm">
+              </div>
+              <h3>Bookmark overload</h3>
+              <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="card">
+              <div class="img-box">
+                <img src="./assets/Brain.png" alt="brain">
+              </div>
+              <h3>No idea connections</h3>
+              <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="card">
+              <div class="img-box">
+                <img src="./assets/Info.png" alt="info">
+              </div>
+              <h3>Forgetting what <br> you learned</h3>
+              <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+          </div>
+
+
+        </div>
+      </section>
+    </main>
   </body>
 </html>
