--- a/index.html
+++ b/index.html
@@ -109,6 +109,46 @@
 
 
         </div>
+
+      </section>
+      <section class="solution-section">
+        <div class="container">
+          <div class="image">
+            <img src="./assets/knowledge.png" alt="knowledge" />
+          </div>
+          <div class="content">
+            <p class="title">The Solution</p>
+
+            <h2>
+              Your second brain, <br />
+              structured by design.
+            </h2>
+            <p>
+              Personal Knowledge Vault isn't another note-taking app. z <br />
+              It's a thinking environment where every note, link, and summary
+              <br />
+              becomes part of an interconnected web of understanding.
+            </p>
+            <ul>
+              <li>
+                <img src="./assets/CheckCircle.png" />Capture ideas with
+                structure built-in from day one
+              </li>
+              <li>
+                <img src="./assets/CheckCircle.png" />Connect related concepts
+                automatically as you write
+              </li>
+              <li>
+                <img src="./assets/CheckCircle.png" />Build lasting knowledge
+                through reflection prompts
+              </li>
+              <li>
+                <img src="./assets/CheckCircle.png" />Find anything instantly
+                with semantic search
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
   </body>
