--- a/index.html
+++ b/index.html
@@ -150,6 +150,22 @@
           </div>
         </div>
       </section>
+      <section class="think-section">
+        <div class="container">
+          <div class="think-content">
+            <h4>Ready to think more clearly?</h4>
+            <p>
+              Join thousands of learners who are building their personal
+              knowledge vaults. <br />
+              Start free, no credit card required.
+            </p>
+            <div class="btn">
+              Get Early Access <i class="fas fa-arrow-right"></i>
+            </div>
+            <p>Free during early access • No credit card needed</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
