--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -21,7 +21,7 @@
       <nav class="container">
         <div class="logo">
           <a href="#">
-            <img src="/assets/logo-navbar.png" alt="Knowledge Vault logo"
+            <img src="assets/logo-navbar.png" alt="Knowledge Vault logo"
           /></a>
 
           </div>
@@ -167,5 +167,38 @@
         </div>
       </section>
     </main>
+    <!-- footer seciton -->
+    <footer>
+      <div class="container">
+        <section class="footer-info">
+          <div class="logo">
+            <img src="./assets/logo-footer.png" alt="footer-logo">
+          </div>
+          <div class="social-links">
+            <p>Social Links</p>
+            <div class="social-icons">
+             <div class="icon">
+               <i class="fa-brands fa-x"></i>
+             </div>
+              <div class="icon">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </div>
+              <div class="icon">
+                <i class="fa-brands fa-facebook-f"></i>
+              </div>
+              
+            </div>
+          </div>
+
+        </section>
+
+        <section class="copyright-section">
+          <small>© 2026 Personal Knowledge Vault. All rights reserved.</small>
+
+        </section>
+
+      </div>
+
+    </footer>
   </body>
 </html>
